--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net/' }
+        maven { url = "https://repo.essential.gg/repository/maven-public" }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         mavenCentral()
         gradlePluginPortal()
@@ -85,6 +86,10 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.3:processor'
     implementation 'org.spongepowered:mixin:0.8.3-SNAPSHOT'
 
+    include "gg.essential:loader-launchwrapper:1.1.3"
+    implementation "gg.essential:essential-1.12.2-forge:12174+g776a77319"
+    embed('gg.essential:loader-launchwrapper:1.1.3')
+
 }
 
 mixin {
@@ -99,7 +104,7 @@ jar {
             'FMLCorePluginContainsFMLMod': 'false',
             'ForceLoadAsMod': true,
             'ModSide': 'CLIENT',
-            'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
+            'TweakClass': 'gg.essential.loader.stage0.EssentialSetupTweaker',
             'TweakOrder': '0',
             'MixinConfigs': 'mixins.mythicprotector.json'
     )
