--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ pluginManagement {
         gradlePluginPortal()
         maven { url = "https://maven.minecraftforge.net/" }
         maven { url = "https://files.minecraftforge.net/maven" }
+        maven { url = "https://repo.essential.gg/repository/maven-public" }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
     }
     resolutionStrategy {
